<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Bin</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_old_password">Old password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_username">Username</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Go to login.</string>
    <string name="btn_update_profile">UPDATE PROFILE</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="btn_scan">Scan and beat them</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="congrats_title">Congrats!</string>
    <string name="home_title">Top 5 users of the month!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string-array name="dummy_data">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>

    </string-array>
    <string name="title_activity_test">TestActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
